export const snapshot = {};

snapshot[`union 1`] = `
{
  anyOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 0,
          type: "number",
        },
        value: {
          type: "boolean",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 1,
          type: "number",
        },
        value: {
          type: "number",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 2,
          type: "number",
        },
        value: {
          type: "string",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
  ],
  discriminator: "type",
}
`;

snapshot[`union 2`] = `
{
  anyOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 0,
          type: "number",
        },
        value: {
          type: "boolean",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 1,
          type: "number",
        },
        value: {
          type: "number",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 2,
          type: "number",
        },
        value: {
          type: "string",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
  ],
  description: "One.",
  discriminator: "type",
}
`;

snapshot[`union 3`] = `
{
  anyOf: [
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 0,
          type: "number",
        },
        value: {
          type: "boolean",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 1,
          type: "number",
        },
        value: {
          type: "number",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
    {
      additionalProperties: false,
      properties: {
        type: {
          const: 2,
          type: "number",
        },
        value: {
          type: "string",
        },
      },
      required: [
        "type",
        "value",
      ],
      type: "object",
    },
  ],
  description: "One. Two.",
  discriminator: "type",
}
`;
